flux/apps/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: multimedia-factory
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
  - name: prowlarr
    port: 9696
    targetPort: 9696
    protocol: TCP
